[package]
name = "serde_merge"
version = "0.1.2"
edition = "2018"
authors = ["Z4RX <iamz4rx@gmail.com>", "Dablus <Double125720@gmail.com>"]
license = "Apache-2.0"
description = """
Simple utility to merge some serializable data types.
"""
homepage = "https://github.com/Z4RX/serde_merge"
repository = "https://github.com/Z4RX/serde_merge"
readme = "README.md"
keywords = ["serde", "merge", "magic", "sugar"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
